# small-Language-Model

./: .gitignore  README.md  __init__.py  hybrid_tokeniztion.py  pyproject.toml  setup.py  slm.ipynb  tok_test.ipynb  tokenize.py  train.py  transformer.py
.claude/: settings.local.json
docs/design/: dinoLM.md
notebooks/: slm (3).ipynb  slm.ipynb  test.ipynb  tok_test.ipynb  train_batch.ipynb  train_tokenizer.ipynb
src/my_slm/: benchmark_logger.py  create_t_f.py  hybrid_tokeniztion.py  multi_train_orchestrator.py  pyproject.toml  train.py  transformer.py
tests/: mfu.py  semantic_eval.py  tellm.md  test_model.py  test_training.py
