[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-slm"
version = "0.1.0"
description = "Hybrid tokenizer + tiny Transformer training utilities."
readme = "README.md"
authors = [{ name = "shmuel toren", email = "shmuel.tor@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = ["torch>=2.0", "numpy>=1.21", "tqdm>=4.60"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["my_slm", "my_slm.*"]
